syntax = "proto3";

package User;

service User {
  // Users
  rpc createUser(userInfo) returns(res) {};
  rpc getAllUsers(emptyReq) returns(res) {};
  rpc getUserByID(onlyID) returns(res) {};
  rpc updateUser(updateUserInfo) returns(res) {};
  rpc deleteUserByID(onlyID) returns(res) {};
  // Auth
  rpc authenticateUserWithEmailAndPassword(emailAndPass) returns(res) {};
}

message userInfo {
  optional string fullName = 1;
  optional string email = 2;
  optional string password = 3;
}

message updateUserInfo {
  required string id = 1;
  optional string fullName = 2;
  optional string email = 3;
  optional string password = 4;
}

message emptyReq {}

message onlyID {
  required string id = 1;
}

message emailAndPass {
  required string email = 1;
  required string password = 2;
}

message res {
  required bool success = 1;
  optional string data = 2;
  optional string message = 3;
}
